--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,7 @@ fos_user:
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+admin_area:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /admin
