--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,4 +80,4 @@ sonata_block:
         sonata.admin.block.admin_list:
             contexts: [admin]
 sonata_admin:
-    title: Qcwebservice Admin
+    title: Lms Admin
