--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "sonata-project/doctrine-orm-admin-bundle": "^3.1",
         "sonata-project/admin-bundle": "^3.9",
-        "sendinblue/sendinblue-api-bundle": "2.0.*"
+        "sendinblue/sendinblue-api-bundle": "2.0.*",
+        "sonata-project/formatter-bundle": "^3.1",
+        "sonata-project/media-bundle": "^3.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
