--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
     "tests"
   ],
   "dependencies": {
-    "autosize": "^3.0.20",
     "bootstrap": "^3.3.7",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "jquery-ui": "^1.12.1"
   }
 }
