--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "bootstrap-select": "^1.12.2"
   }
 }
