--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,23 +7,35 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
-    admin.user:
-        class: AppBundle\Admin\UserAdmin
-        arguments: [~, AppBundle\Entity\User, ~]
-        tags:
-            - { name: sonata.admin, manager_type: orm, label: User }
-    admin.discipline:
-        class: AppBundle\Admin\DisciplineAdmin
-        arguments: [~, AppBundle\Entity\Discipline, ~]
-        tags:
-            - { name: sonata.admin, manager_type: orm, label: Discipline }
-    admin.cours:
-        class: AppBundle\Admin\CoursAdmin
-        arguments: [~, AppBundle\Entity\Cours, ~]
-        tags:
-            - { name: sonata.admin, manager_type: orm, label: Cours }
+
     admin.cohorte:
         class: AppBundle\Admin\CohorteAdmin
         arguments: [~, AppBundle\Entity\Cohorte, ~]
         tags:
-            - { name: sonata.admin, manager_type: orm, label: Cohorte }
+            - { name: sonata.admin, manager_type: orm, label: Cohortes, group: "Cours" }
+    admin.cours:
+        class: AppBundle\Admin\CoursAdmin
+        arguments: [~, AppBundle\Entity\Cours, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Cours, group: "Cours" }
+    admin.discipline:
+        class: AppBundle\Admin\DisciplineAdmin
+        arguments: [~, AppBundle\Entity\Discipline, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Disciplines, group: "Cours" }
+    admin.user:
+        class: AppBundle\Admin\UserAdmin
+        arguments: [~, AppBundle\Entity\User, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Utilisateurs, group: "Utilisateurs" }
+
+    admin.categorieLien:
+        class: AppBundle\Admin\CategorieLienAdmin
+        arguments: [~, AppBundle\Entity\CategorieLien, ~]
+        tags:
+            - { name: sonata.admin,manager_type: orm, label: Catégories des liens, group: "Ressources" }
+    admin.typeLien:
+        class: AppBundle\Admin\TypeLienAdmin
+        arguments: [~, AppBundle\Entity\TypeLien, ~]
+        tags:
+            - { name: sonata.admin,manager_type: orm, label: Types de liens, group: "Ressources" }
