upload en cours

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.7",
     "components-font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
-    "bootstrap-select": "^1.12.2"
+    "bootstrap-select": "^1.12.2",
+    "blueimp-file-upload": "^9.15.0"
   }
 }
