--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,7 +6,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi:             ~
@@ -38,6 +38,13 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
         - 'SonataCoreBundle:Form:datepicker.html.twig'
+
+#enable intl extensions
+services:
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
 
 # Doctrine Configuration
 doctrine:
