--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap-select": "^1.12.2",
     "blueimp-file-upload": "^9.15.0",
     "fullcalendar": "^3.2.0",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47"
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "tablesorter": "jquery.tablesorter#^2.28.7"
   }
 }
