--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,7 @@ security:
     role_hierarchy:
         ROLE_USER:       ROLE_USER
         ROLE_ADMIN:       ROLE_ADMIN
-        ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN
+        ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN, ROLE_ADMIN
 
     providers:
             fos_userbundle:
