--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
         "sonata-project/formatter-bundle": "^3.1",
         "sonata-project/media-bundle": "^3.3",
         "twig/extensions": "^1.4",
-        "egeloen/ckeditor-bundle": "^4.0"
+        "egeloen/ckeditor-bundle": "^4.0",
+        "gos/web-socket-bundle": "^1.8",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
