--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -121,6 +121,14 @@ ivory_ck_editor:
                       { name: 'insert',      items : [ 'Image','Flash','Table','HorizontalRule','Smiley','SpecialChar' ] }
                     ]
 gos_web_socket:
+    client:
+        session_handler: ~ # Example: @session.handler.pdo
+        firewall: ws_firewall # Example: secured_area, you must replace it by your firewall
+        storage:
+            driver: '@gos_web_socket.server.in_memory.client_storage.driver'
+            decorator: ~
+    shared_config: true
+    assetic: true #use assetic bundle
     topics:
         - "@chat.topic_sample_service"
     server:
