--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -79,3 +79,4 @@ services:
 
     chat.topic_sample_service:
         class: AppBundle\Service\Chat\ChatTopic
+        arguments: ['@gos_web_socket.websocket.client_manipulator']
