--- a/src/AppBundle/Resources/config/pubsub/routing.yml
+++ b/src/AppBundle/Resources/config/pubsub/routing.yml
@@ -1,9 +1,7 @@
 app_topic_chat:
-    channel: app/chat/{chatid}/user/{userid}
+    channel: app/chat/{chatid}
     handler:
         callback: 'app.topic' #related to the getName() of your topic
     requirements:
         chatid:
-            pattern: "[0-9]+"
-        userid:
             pattern: "[0-9]+"
