--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,9 @@ doctrine:
         #     path:     "%database_path%"
 
     orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
+        auto_generate_proxy_classes:  true # <- change to true
+        proxy_dir:            '%kernel.cache_dir%/doctrine/orm/Proxies'
+        proxy_namespace:      Proxies
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
