--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,6 +27,7 @@ security:
 
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/emailingSendAdminMail_ajax, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/inscription, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/registration, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/activation, role: IS_AUTHENTICATED_ANONYMOUSLY }
