--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,6 +22,7 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 always_use_default_target_path : true
                 default_target_path: /myCourses
+                success_handler: authentication.success.listener
             logout: true
             anonymous:  true
 
