--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "twig/extensions": "^1.4",
         "egeloen/ckeditor-bundle": "^4.0",
         "gos/web-socket-bundle": "^1.8",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "knplabs/knp-paginator-bundle": "^2.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
