--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,7 +93,7 @@ fos_user:
     firewall_name: main
     user_class: AppBundle\Entity\User
     from_email:
-        address: noreply@afadec.fr
+        address: afadec.prod@afadec.fr
         sender_name: Contact AFADEC
 
 sonata_block:
