--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,16 +1,23 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
-
+    dateLimiNotifs: 2019-01-01 00:00:00
+    upload_directory: 'var/upload/'
+    upload_steps: '../'
+    upload_srcSteps: '../'
+    upload_course: '../../'
+    distant_host: 'stdi.nfrance.com'
+    distant_user: 'chamilo'
+    distant_password: 'xserve'
+    distant_database: 'chamilo'
+    admin_password_init: '+JeSuisAfadecAdmin2017+'
+    template: 'afadec'
+    grouped_mails_limit: 2
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
-
     notifsSender:
         class: AppBundle\Service\NotifsSender
-        arguments: ['@doctrine.orm.entity_manager', '@mailer', '@twig']
+        arguments: ['@doctrine.orm.entity_manager', '@mailer', '@twig', %dateLimiNotifs%]
 
     admin.cours:
         class: AppBundle\Admin\CoursAdmin
