--- a/composer.json
+++ b/composer.json
@@ -18,23 +18,25 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.2.*",
+        "symfony/web-profiler-bundle": "3.4.6",
+        "symfony/symfony": "3.4.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "^2.8",
+        "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/framework-extra-bundle": "^5.0.0",
         "incenteev/composer-parameter-handler": "^2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "sonata-project/doctrine-orm-admin-bundle": "^3.1",
+        "friendsofsymfony/user-bundle": "2.0.*",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.7",
         "sonata-project/admin-bundle": "^3.9",
         "sendinblue/sendinblue-api-bundle": "2.0.*",
         "sonata-project/formatter-bundle": "^3.1",
         "sonata-project/media-bundle": "^3.3",
         "twig/extensions": "^1.4",
+        "twig/twig": "^1.0||^2.0",
         "egeloen/ckeditor-bundle": "^4.0",
         "gos/web-socket-bundle": "^1.8",
         "symfony/assetic-bundle": "^2.8",
