--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "egeloen/ckeditor-bundle": "^4.0",
         "gos/web-socket-bundle": "^1.8",
         "symfony/assetic-bundle": "^2.8",
-        "knplabs/knp-paginator-bundle": "^2.7"
+        "knplabs/knp-paginator-bundle": "^2.7",
+        "studit/h5p-bundle": "0.3.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
