--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -134,7 +134,7 @@ gos_web_socket:
         - "@chat.topic_sample_service"
     server:
         port: 1338        #The port the socket server will listen on
-        host: 80.247.226.149   #The host ip to bind to
+        host: 80.247.226.149   #The host ip to bind to 80.247.226.149
         router:
             resources:
                 - "@AppBundle/Resources/config/pubsub/routing.yml"
