--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -15,6 +15,10 @@ parameters:
     grouped_mails_limit: 2
 
 services:
+    calendarServ:
+        class: AppBundle\Service\CalendarServ
+        arguments: ['@doctrine.orm.entity_manager']
+
     notifsSender:
         class: AppBundle\Service\NotifsSender
         arguments: ['@doctrine.orm.entity_manager', '@mailer', '@twig', %dateLimiNotifs%]
