--- a/bower.json
+++ b/bower.json
@@ -22,11 +22,14 @@
     "jquery-ui": "^1.12.1",
     "bootstrap-select": "^1.12.2",
     "blueimp-file-upload": "^9.15.0",
-    "fullcalendar": "^3.2.0",
+    "fullcalendar": "4.0.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "tablesorter": "jquery.tablesorter#^2.28.7",
     "ckeditor": "^4.6.2",
     "nvd3": "^1.8.6",
     "d3": "^4.11.0"
+  },
+  "resolutions": {
+    "fullcalendar": "4.0.2"
   }
 }
