--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "sonata-project/media-bundle": "^3.3",
         "jms/serializer-bundle": "^2.4",
         "twig/extensions": "^1.4",
-        "twig/twig": "^1.0||^2.0",
+        "twig/twig": "^2.0",
         "egeloen/ckeditor-bundle": "^4.0",
         "gos/web-socket-bundle": "^1.8",
         "symfony/assetic-bundle": "^2.8",
