--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,6 +34,7 @@ security:
         - { path: ^/activation, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/faq, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/infosPratiques, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/concours, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/cookies, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/metierEnseignant, role: IS_AUTHENTICATED_ANONYMOUSLY }
