--- a/web/.htaccess
+++ b/web/.htaccess
@@ -20,8 +20,8 @@ DirectoryIndex app.php
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
-    RewriteCond %{HTTPS} !=on
-    RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+    #RewriteCond %{HTTPS} !=on
+    #RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
 
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
