--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,6 +29,7 @@ security:
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/myCourses, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/cours/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/emailingSendAdminMail_ajax, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/inscription, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/registration, role: IS_AUTHENTICATED_ANONYMOUSLY }
