--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "tablesorter": "jquery.tablesorter#^2.28.7",
     "ckeditor": "4.6.2",
     "nvd3": "1.8.6",
-    "d3": "4.11.0"
+    "d3": "4.11.0",
+    "chart.js": "^2.9.3"
   },
   "resolutions": {
     "fullcalendar": "4.0.2"
