--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,10 @@
         "symfony/assetic-bundle": "^2.8",
         "knplabs/knp-paginator-bundle": "^2.7",
         "studit/h5p-bundle": "^0.3.3",
-        "wapmorgan/mp3info": "^0.0.4"
+        "wapmorgan/mp3info": "^0.0.4",
+        "sonata-project/exporter": "2.3.0",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.15"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
