--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,7 +2,7 @@
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
     dateLimiNotifs: 2019-01-01 00:00:00
-    upload_directory: 'var/upload/'
+    upload_directory: 'web/upload/'
     upload_steps: '../'
     upload_srcSteps: '../'
     upload_course: '../../'
